[package]
name = "http_guest"
version = "0.1.0"
authors = ["Fastly Labs <labs@fastly.com>"]
repository = "https://github.com/fastly/terrarium-rust-guest"
documentation = "https://wasm.fastlylabs.com/docs/rust/http_guest/index.html"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
coarsetime = "0.1"
http = "0.1"
rand_core = "0.3"
failure = "0.1"
